google maps api implementada e testada

--- a/RotaFlex/appsettings.json
+++ b/RotaFlex/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "GoogleMaps": {
+    "ApiKey": "AIzaSyC-LZkV2B_6wHRtnkh-LzCisFlDxO-ft8w"
+  },
   "AllowedHosts": "*"
 }
